--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
   </head>
   <body>
     <div class="container" >
-      <h1>stay tuned!!!</h1> 
+      <!-- <h1>stay tuned!!!</h1> 
       <h1>we are launching soon</h1>
       <br>
       <h1>contact +91 983266262 for early access</h1> 
       <br>
-      <br>
+      <br> -->
+    </div>
+    <div class="results">
+      <div id="projectname">
+        thisssssssssssssss
+      </div>
+      <div id="totalTasks">
+      </div>
+      <div id="completedTasks">
+      </div>
+
     </div>
   </body>
+  <!-- <script src="./script.js"></script> -->
 </html>
